# docs/swagger.yaml
@@ -1,5 +1,37 @@
 basePath: /api/v1
 definitions:
+  models.ChangePassword:
+    properties:
+      current_password:
+        description: รหัสผ่านปัจจุบัน
+        example: password
+        type: string
+      new_password:
+        description: รหัสผ่านใหม่
+        example: password123
+        type: string
+    required:
+    - current_password
+    - new_password
+    type: object
+  models.SwagChangePasswordResponse:
+    properties:
+      data:
+        description: ข้อมูล
+        type: object
+      message:
+        description: ข้อความตอบกลับ
+        example: Change Password Successfully
+        type: string
+      status:
+        description: HTTP Status Code
+        example: 200
+        type: integer
+      success:
+        description: ผลการเรียกใช้งาน
+        example: true
+        type: boolean
+    type: object
   models.SwagCreateUserResponse:
     properties:
       data:
@@ -15,6 +47,24 @@ definitions:
       status:
         description: HTTP Status Code
         example: 201
+        type: integer
+      success:
+        description: ผลการเรียกใช้งาน
+        example: true
+        type: boolean
+    type: object
+  models.SwagDeleteBase:
+    properties:
+      data:
+        description: ข้อมูล
+        type: object
+      message:
+        description: ข้อความตอบกลับ
+        example: Deleted Successfully
+        type: string
+      status:
+        description: HTTP Status Code
+        example: 200
         type: integer
       success:
         description: ผลการเรียกใช้งาน
@@ -157,6 +207,27 @@ definitions:
         example: 1
         type: integer
     type: object
+  models.SwagUpdateUserResponse:
+    properties:
+      data:
+        properties:
+          users:
+            $ref: '#/definitions/models.SwagUser'
+            type: object
+        type: object
+      message:
+        description: ข้อความตอบกลับ
+        example: Updated Successfully
+        type: string
+      status:
+        description: HTTP Status Code
+        example: 200
+        type: integer
+      success:
+        description: ผลการเรียกใช้งาน
+        example: true
+        type: boolean
+    type: object
   models.SwagUser:
     properties:
       avatar:
@@ -175,6 +246,33 @@ definitions:
         description: ID
         example: 1
         type: integer
+      lastName:
+        description: นามสกุล
+        example: doe
+        type: string
+      slug:
+        description: Slug
+        example: user01
+        type: string
+      username:
+        description: Username
+        example: user01
+        type: string
+    type: object
+  models.SwagUserBody:
+    properties:
+      avatar:
+        description: รูป Avatar
+        example: user01.png
+        type: string
+      email:
+        description: อีเมล์
+        example: user01@email.com
+        type: string
+      firstName:
+        description: ชื่อ
+        example: john
+        type: string
       lastName:
         description: นามสกุล
         example: doe
@@ -291,6 +389,40 @@ paths:
       tags:
       - ผู้ใช้งาน
   /users/{slug}:
+    delete:
+      consumes:
+      - application/json
+      description: ลบผู้ใช้งาน
+      parameters:
+      - description: slug ผู้ใช้งาน
+        in: path
+        name: slug
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.SwagDeleteBase'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.SwagError400'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.SwagError404'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.SwagError500'
+      security:
+      - ApiKeyAuth: []
+      summary: ลบผู้ใช้งาน
+      tags:
+      - ผู้ใช้งาน
     get:
       consumes:
       - application/json
@@ -321,6 +453,87 @@ paths:
           schema:
             $ref: '#/definitions/models.SwagError500'
       summary: ข้อมูลผู้ใช้งาน
+      tags:
+      - ผู้ใช้งาน
+    put:
+      consumes:
+      - application/json
+      description: แก้ไขผู้ใช้งาน
+      parameters:
+      - description: slug ผู้ใช้งาน
+        in: path
+        name: slug
+        required: true
+        type: string
+      - description: แก้ไขผู้ใช้งาน
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/models.SwagUserBody'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.SwagUpdateUserResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.SwagError400'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.SwagError404'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.SwagError500'
+      security:
+      - ApiKeyAuth: []
+      summary: แก้ไขผู้ใช้งาน
+      tags:
+      - ผู้ใช้งาน
+  /users/{slug}/password:
+    put:
+      consumes:
+      - application/json
+      description: เปลี่ยนรหัสผ่าน
+      parameters:
+      - description: slug ผู้ใช้งาน
+        in: path
+        name: slug
+        required: true
+        type: string
+      - description: เปลี่ยนรหัสผ่าน
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/models.ChangePassword'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.SwagChangePasswordResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.SwagError400'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.SwagError404'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.SwagError500'
+      security:
+      - ApiKeyAuth: []
+      summary: เปลี่ยนรหัสผ่าน
       tags:
       - ผู้ใช้งาน
 securityDefinitions:
